<resources>
	<string name="app_name" translatable="false">Weatheria</string>
	<string name="module_title_gmap">Google Maps Assisted Search</string>
	<!--main-->
	<string name="action_settings">Settings</string>
	<!--region home-->
	<string name="action_my_locations">My locations</string>
	<string name="action_add_location">Add location</string>
	<string name="no_saved_locations">You don\'t have any saved locations.\nWhy not add one?</string>
	<string name="f_last_update">Last update: %s</string>
	<string name="f_feels_like">Feels like %s</string>
	<string name="f_2s" translatable="false">%1$s %2$s</string>
	<string name="f_2s_p" translatable="false">%1$s (%2$s)</string>
	<string name="cd_weather_icon">Weather icon</string>
	<string name="cd_pop">Probability of Precipitation</string>
	<string name="cd_pressure">Pressure</string>
	<string name="cd_humidity">Humidity</string>
	<string name="cd_dew_point">Dew point</string>
	<string name="cd_clouds">Clouds</string>
	<string name="cd_visibility">Visibility</string>
	<string name="cd_wind_speed_dir">Wind speed and direction</string>
	<string name="cd_uv">UV Index</string>
	<string name="cd_sunrise">Sunrise time</string>
	<string name="cd_sunset">Sunset time</string>
	<string name="cd_moonrise">Moonrise time</string>
	<string name="cd_moonset">Moonset time</string>
	<string name="hourly_label">Hourly</string>
	<string name="daily_label">Daily</string>
	<string name="today">Today</string>
	<string-array name="weather_conditions">
		<item>Sunny</item>
		<item>Mostly Sunny</item>
		<item>Partly Cloudy</item>
		<item>Intermittent Clouds</item>
		<item>Hazy Sunshine</item>
		<item>Mostly Cloudy</item>
		<item>Cloudy</item>
		<item>Overcast</item>
		<item>Fog</item>
		<item>Showers</item>
		<item>Mostly Cloudy w/ Showers</item>
		<item>Partly Sunny w/ Showers</item>
		<item>Thunderstorms</item>
		<item>Mostly Cloudy w/ TStorms</item>
		<item>Partly Sunny w/ TStorms</item>
		<item>Rain</item>
		<item>Flurries</item>
		<item>Mostly Cloudy w/ Flurries</item>
		<item>Partly Sunny w/ Flurries</item>
		<item>Snow</item>
		<item>Mostly Cloudy w/ Snow</item>
		<item>Ice</item>
		<item>Sleet</item>
		<item>Freezing Rain</item>
		<item>Rain and Snow</item>
		<item>Hot</item>
		<item>Cold</item>
		<item>Windy</item>
		<item>Clear</item>
		<item>Mostly Clear</item>
		<item>Partly Cloudy</item>
		<item>Intermittent Clouds</item>
		<item>Hazy Moonshine</item>
		<item>Mostly Cloudy</item>
		<item>Partly Cloudy w/ Showers</item>
		<item>Mostly Cloudy w/ Showers</item>
		<item>Partly Cloudy w/ TStorms</item>
		<item>Mostly Cloudy w/ TStorms</item>
		<item>Mostly Cloudy w/ Flurries</item>
		<item>Mostly Cloudy w/ Snow</item>
	</string-array>
	<string-array name="uv_levels">
		<item>Low</item>
		<item>Moderate</item>
		<item>High</item>
		<item>Very High</item>
		<item>Extreme</item>
	</string-array>
	<string-array name="units_distance">
		<item>km</item>
		<item>miles</item>
	</string-array>
	<string-array name="units_speed">
		<item>km/h</item>
		<item>mph</item>
	</string-array>
	<string-array name="units_pressure">
		<item>mb</item>
		<item>inHg</item>
	</string-array>
	<string-array name="moon_phases">
		<item>New Moon</item>
		<item>Waxing Crescent</item>
		<item>First Quarter</item>
		<item>Waxing Gibbous</item>
		<item>Full Moon</item>
		<item>Waning Gibbous</item>
		<item>Last Quarter</item>
		<item>Waning Crescent</item>
	</string-array>
	<!--endregion-->
	<!--region icon paths-->
	<string name="sun_path" translatable="false">M12 6a6 6 0 1 0 0 12 6 6 0 0 0 0-12z</string>
	<string name="moon_path" translatable="false">M17.6 14.1a6 6 0 1 1 -8.2-7.5 6 6 0 0 0 8.2 7.5z</string>
	<string name="cloud_path" translatable="false">M17.96 16.71c4.03-0.29 3.64-5.8-0.08-5.86a3.9 3.9 0 0 0-7.49-0.31 3.16 3.16 0 0 0-3.98 2.38c-2.5 0.46-1.92 3.64 0.06 3.8z</string>
	<string name="mist_path" translatable="false">M6.97 19.51h11</string>
	<string name="patchy_rain_path" translatable="false">M12.02 18.76l-1.14 2.78m3.18-2.78l-1.14 2.78</string>
	<string name="snow_flake_path" translatable="false">M13.11 20.94l-1.27-2.18m1.89 1.09h-2.51m1.88-1.09l-1.26 2.18</string>
	<string name="freezing_drizzle_path" translatable="false">M8.9 18.76h1.14l-0.57 1.39zm3.14 0l-0.57 1.39m2.57-1.39l-0.57 1.39m2.57-1.39l-0.57 1.39</string>
	<string name="lightning_path" translatable="false">M13.04 13.94l-1.14 2.78h1.14l-0.76 1.85h0.76l-0.76 1.85</string>
	<string name="blowing_path" translatable="false">M13 18.76h5m-5 1.5h4</string>
	<string name="fog_path" translatable="false">M6.97 18.76h11m-11 1.5h11</string>
	<string name="freezing_fog_path" translatable="false">M6.97 18.76h1.14l-0.57 1.39zm2.64 0h8.36m-8.93 1.5h8.93</string>
	<string name="light_drizzle_path" translatable="false">M10.04 18.76l-0.57 1.39m2.57-1.39l-0.57 1.39m2.57-1.39l-0.57 1.39m2.57-1.39l-0.57 1.39</string>
	<string name="heavy_freezing_drizzle_path" translatable="false">M6.97 18.76h1.07l-0.57 1.39zm3.07 0l-0.57 1.39m2.57-1.39l-0.57 1.39m2.57-1.39l-0.57 1.39m2.57-1.39l-0.57 1.39m2.57-1.39l-0.57 1.39</string>
	<string name="heavy_rain_path" translatable="false">M10.04 18.76L8.9 21.54m3.14-2.78l-1.14 2.78m3.14-2.78l-1.14 2.78m3.14-2.78l-1.14 2.78</string>
	<string name="freezing_rain_path" translatable="false">M7.76 18.76h2.28L8.9 21.54zm2.28 0L8.9 21.54m3.14-2.78l-1.14 2.78m3.14-2.78l-1.14 2.78m3.14-2.78l-1.14 2.78</string>
	<string name="ice_pellet_path" translatable="false">M12.5 18.35a1.5 1.5 0 0 1 0 3 1.5 1.5 0 0 1 0-3z</string>
	<string name="torrential_rain_path" translatable="false">M8.04 18.76L6.9 21.54m3.14-2.78L8.9 21.54m3.14-2.78l-1.14 2.78m3.14-2.78l-1.14 2.78m3.14-2.78l-1.14 2.78m3.14-2.78l-1.14 2.78</string>
	<!--endregion-->
	<!--region add location-->
	<string name="action_search">Search</string>
	<string name="action_get_my_location">Get My Location</string>
	<string name="action_download_map">Get Map Assistance…</string>
	<string name="action_uninstall_map">Uninstall Map</string>
	<string name="gmaps_download_message">To keep the app size small, and also because not every user needs it, we removed the Google maps assisted search feature from the app by default.\nYou can still download it if you want, then delete it again once you are done with it.</string>
	<string name="download">Download</string>
	<string name="starting_download">Starting download…</string>
	<string name="downloading">Downloading…</string>
	<string name="installing">Installing…</string>
	<string name="installed">Installed successfully!</string>
	<string name="install_failed">Installation failed! Try again later.</string>
	<string name="uninstall_note">Uninstallation will finish upon app restart.</string>
	<string name="request_rationale_title">Why we need permission</string>
	<string name="location_request_rationale">The app only needs location permission for a moment to find your current location. You can safely revoke it afterwards.\nYou can also change settings to use IP geolocation instead.</string>
	<string name="give_permission">Give permission</string>
	<string name="deny">Deny</string>
	<string name="no_search_result">No result.\n\nUse the search bar above or zoom the map in (if downloaded) to find a location.</string>
	<!--endregion-->
	<!--region locations-->
	<string name="action_delete_all">Delete all</string>
	<string name="action_refresh_all">Refresh all</string>
	<string name="cd_delete">Delete</string>
	<string name="cd_reorder">Reorder</string>
	<!--endregion-->
	<!--region errors-->
	<string name="retry">Retry</string>
	<string name="error_location_denied">Location permission not granted</string>
	<string name="error_location_disabled">Please enable location service, then try again</string>
	<string name="error_location_not_found">Location not found. Try enabling GPS then moving the phone a bit.</string>
	<string name="error_no_internet">No Internet connection</string>
	<string name="error_timed_out">Request timed out</string>
	<string name="error_server_error">Server response error. Try a different location or try again later</string>
	<string name="error_server_quota">Exceeded server daily quota of free requests</string>
	<string name="error_unknown">Unknown error</string>
	<!--endregion-->
	<!--region settings-->
	<string-array name="values_indices_2">
		<item>0</item>
		<item>1</item>
	</string-array>
	<string-array name="values_indices_3">
		<item>0</item>
		<item>1</item>
		<item>2</item>
	</string-array>
	<string name="cat_header_general">General</string>
	<string name="key_units" translatable="false">units</string>
	<string name="title_units">Unit System</string>
	<string-array name="entries_unit_system">
		<item>Metric</item>
		<item>Imperial</item>
	</string-array>
	<string name="cat_header_loc">My Location</string>
	<string name="key_loc_provider" translatable="false">loc_provider</string>
	<string name="title_loc_provider">Location Provider</string>
	<string-array name="entries_loc_providers">
		<item>IP Address</item>
		<item>Network</item>
		<item>Network and GPS</item>
	</string-array>
	<string-array name="summaries_loc_provider">
		<item>%s: Fast and does not require permission, but less accurate.</item>
		<item>%s: Uses WiFi and mobile networks to estimate location. Good accuracy, but requires coarse location permission.</item>
		<item>%s: Uses everything to get the best accuracy. Can be slow and requires fine location permission.</item>
	</string-array>
	<string name="cat_header_sync">Sync</string>
	<string name="key_auto_refresh" translatable="false">auto_refresh</string>
	<string name="title_auto_refresh">Auto refresh</string>
	<string-array name="entries_auto_refresh">
		<item>Never</item>
		<item>Once a day</item>
		<item>Twice a day</item>
	</string-array>
	<string name="cat_header_help">Help</string>
	<string name="title_about">About</string>
	<string name="key_selected" translatable="false">selected</string>
	<!--endregion-->
	<!--region widget-->
	<string name="app_widget_desc">A widget that shows forecast summary.</string>
	<string name="cd_refresh">Refresh</string>
	<string name="ph_location">Location name</string>
	<string name="ph_value" translatable="false">--</string>
	<!--endregion-->
	<!--region notifications-->
	<string name="noti_def_channel_name">Default channel</string>
	<string name="noti_def_channel_desc">All app notifications use this channel</string>
	<!--endregion-->
</resources>