<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	style="@style/Widget.AppWidget.AppWidget.Container"
	android:theme="@style/Theme.AppWidget.AppWidgetContainer"
	android:padding="8dp">
	<TextView
		android:id="@+id/tv_location"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textStyle="bold"
		tools:text="Location name"/>
	<ImageView
		android:id="@+id/iv_icon"
		android:layout_width="56dp"
		android:layout_height="56dp"
		android:layout_below="@id/tv_location"
		android:layout_alignParentStart="true"
		android:contentDescription="@string/cd_weather_icon"
		tools:src="@drawable/w_clear_d"/>
	<TextView
		android:id="@+id/tv_temp"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignTop="@id/iv_icon"
		android:layout_alignBottom="@id/iv_icon"
		android:layout_toEndOf="@id/iv_icon"
		android:textSize="36sp"
		tools:text="199°"/>
	<TextView
		android:id="@+id/tv_humidity_value"
		android:layout_width="84dp"
		android:layout_height="wrap_content"
		android:layout_alignTop="@id/iv_icon"
		android:layout_alignParentEnd="true"
		android:gravity="end"
		android:maxLines="1"
		tools:text="99 %"/>
	<TextView
		android:id="@+id/tv_humidity_label"
		android:layout_width="64dp"
		android:layout_height="wrap_content"
		android:layout_alignTop="@id/tv_humidity_value"
		android:layout_toStartOf="@id/tv_humidity_value"
		android:maxLines="1"
		android:text="@string/cd_humidity"/>
	<TextView
		android:id="@+id/tv_uv_value"
		android:layout_width="84dp"
		android:layout_height="wrap_content"
		android:layout_below="@id/tv_humidity_value"
		android:layout_alignParentEnd="true"
		android:layout_marginTop="4dp"
		android:ellipsize="end"
		android:gravity="end"
		android:maxLines="1"
		tools:text="5 (Moderate)"/>
	<TextView
		android:id="@+id/tv_uv_label"
		android:layout_width="64dp"
		android:layout_height="wrap_content"
		android:layout_alignTop="@id/tv_uv_value"
		android:layout_toStartOf="@id/tv_uv_value"
		android:maxLines="1"
		android:text="@string/cd_uv"/>
	<LinearLayout
		android:id="@+id/ll_forecasts"
		android:layout_width="match_parent"
		android:layout_height="72dp"
		android:layout_below="@id/iv_icon"
		android:orientation="horizontal"
		android:gravity="center_horizontal"/>
</RelativeLayout>