<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="?attr/listPreferredItemHeight"
	android:background="?attr/selectableItemBackground">
	<ImageButton
		android:id="@+id/ib_delete"
		style="@style/Widget.MaterialComponents.Button.OutlinedButton"
		android:layout_width="@dimen/_48sdp"
		android:layout_height="0dp"
		android:contentDescription="@string/cd_delete"
		android:scaleType="center"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toStartOf="@id/tv_name"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:srcCompat="@drawable/ic_clear"/>
	<TextView
		android:id="@+id/tv_name"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:maxLines="1"
		android:textAppearance="?attr/textAppearanceListItem"
		app:layout_constraintBottom_toTopOf="@id/tv_country"
		app:layout_constraintEnd_toStartOf="@id/iv_icon"
		app:layout_constraintStart_toEndOf="@id/ib_delete"
		app:layout_constraintTop_toTopOf="parent"
		tools:text="@tools:sample/cities"/>
	<TextView
		android:id="@+id/tv_country"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:maxLines="1"
		android:textSize="@dimen/_10ssp"
		app:layout_constraintBottom_toTopOf="@id/tv_dt"
		app:layout_constraintEnd_toEndOf="@id/tv_name"
		app:layout_constraintStart_toStartOf="@id/tv_name"
		app:layout_constraintTop_toBottomOf="@id/tv_name"
		tools:text="@tools:sample/cities"/>
	<TextView
		android:id="@+id/tv_dt"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:alpha="0.75"
		android:maxLines="1"
		android:textSize="@dimen/_10ssp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="@id/tv_name"
		app:layout_constraintStart_toStartOf="@id/tv_name"
		app:layout_constraintTop_toBottomOf="@id/tv_country"
		tools:text="Mon 3:51 PM (+01:00)"/>
	<ImageView
		android:id="@+id/iv_icon"
		android:layout_width="@dimen/_24sdp"
		android:layout_height="0dp"
		android:contentDescription="@string/cd_weather_icon"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintDimensionRatio="1:1"
		app:layout_constraintEnd_toStartOf="@id/tv_temp"
		app:layout_constraintStart_toEndOf="@id/tv_name"
		app:layout_constraintTop_toTopOf="parent"
		tools:src="@drawable/w_rain_h"/>
	<TextView
		android:id="@+id/tv_temp"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toStartOf="@id/iv_drag_handle"
		app:layout_constraintStart_toEndOf="@id/iv_icon"
		app:layout_constraintTop_toTopOf="parent"
		tools:text="111°"/>
	<ImageButton
		android:id="@+id/iv_drag_handle"
		style="@style/Widget.MaterialComponents.Button.OutlinedButton"
		android:layout_width="@dimen/_48sdp"
		android:layout_height="0dp"
		android:contentDescription="@string/cd_reorder"
		android:scaleType="center"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@id/tv_temp"
		app:layout_constraintTop_toTopOf="parent"
		app:srcCompat="@drawable/ic_drag_handle"/>
</androidx.constraintlayout.widget.ConstraintLayout>