<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	tools:context=".ui.home.HomePagerFragment">
	<data>
		<variable
			name="info"
			type="asceapps.weatheria.model.WeatherInfo"/>
	</data>
	<androidx.core.widget.NestedScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:scrollbars="none">
		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="@dimen/_16sdp">
			<androidx.constraintlayout.widget.Guideline
				android:id="@+id/mid_v_guideline"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				app:layout_constraintGuide_percent="0.5"/>
			<TextView
				android:id="@+id/tv_location"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/_24sdp"
				android:gravity="center_horizontal"
				android:text="@{@string/f_comma_sep(info.location.name, info.location.country)}"
				android:textSize="@dimen/_14ssp"
				android:textStyle="bold"
				app:layout_constraintEnd_toStartOf="@+id/mid_v_guideline"
				app:layout_constraintStart_toStartOf="@+id/mid_v_guideline"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintWidth_percent="0.6"
				tools:text="@tools:sample/cities"/>
			<TextView
				android:id="@+id/tv_time"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:alpha="0.75"
				android:textSize="@dimen/_10ssp"
				android:text="@{info.now}"
				app:layout_constraintEnd_toEndOf="@id/mid_v_guideline"
				app:layout_constraintStart_toStartOf="@id/mid_v_guideline"
				app:layout_constraintTop_toBottomOf="@id/tv_location"
				tools:text="Mon, September 30, 12:59 PM (+11:00)"/>
			<TextView
				android:id="@+id/tv_last_update"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/_4sdp"
				android:alpha="0.75"
				android:textSize="@dimen/_9ssp"
				android:text="@{@string/f_last_update(info.lastUpdate)}"
				app:layout_constraintStart_toStartOf="@id/mid_v_guideline"
				app:layout_constraintTop_toBottomOf="@id/tv_time"
				app:layout_constraintEnd_toEndOf="@id/mid_v_guideline"
				tools:text="Last update: 0 min ago"/>
			<ImageView
				android:id="@+id/iv_icon"
				android:layout_width="@dimen/_72sdp"
				android:layout_height="0dp"
				android:layout_marginTop="@dimen/_32sdp"
				android:layout_marginEnd="@dimen/_8sdp"
				android:contentDescription="@string/cd_weather_icon"
				android:scaleType="fitXY"
				app:icon="@{info.current.icon}"
				app:layout_constraintBottom_toTopOf="@id/tv_min_max"
				app:layout_constraintDimensionRatio="1:1"
				app:layout_constraintEnd_toStartOf="@+id/mid_v_guideline"
				app:layout_constraintTop_toBottomOf="@+id/tv_last_update"/>
			<TextView
				android:id="@+id/tv_min_max"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/_8sdp"
				android:text="@{info.todayMinMax}"
				android:textSize="@dimen/_12ssp"
				android:singleLine="true"
				app:layout_constraintBottom_toTopOf="@id/tv_weather"
				app:layout_constraintEnd_toEndOf="@id/iv_icon"
				app:layout_constraintStart_toStartOf="@id/iv_icon"
				app:layout_constraintTop_toBottomOf="@id/iv_icon"
				tools:text="155°\t\t|\t\t199°"/>
			<TextView
				android:id="@+id/tv_temp"
				android:layout_width="wrap_content"
				android:layout_height="0dp"
				android:layout_marginStart="@dimen/_8sdp"
				android:gravity="bottom|center_horizontal"
				android:text="@{info.currentTemp}"
				android:textSize="@dimen/_48ssp"
				app:layout_constraintBottom_toBottomOf="@+id/iv_icon"
				app:layout_constraintStart_toEndOf="@id/mid_v_guideline"
				app:layout_constraintTop_toTopOf="@+id/iv_icon"
				tools:text="99°"/>
			<TextView
				android:id="@+id/tv_feels_like"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@{@string/f_feels_like(info.currentFeel)}"
				android:textSize="@dimen/_12ssp"
				android:singleLine="true"
				app:layout_constraintBaseline_toBaselineOf="@id/tv_min_max"
				app:layout_constraintEnd_toEndOf="@id/tv_temp"
				app:layout_constraintStart_toStartOf="@id/tv_temp"
				tools:text="Feels like 99°"/>
			<TextView
				android:id="@+id/tv_weather"
				android:layout_width="wrap_content"
				android:layout_height="@dimen/_72sdp"
				android:gravity="center"
				android:maxLines="2"
				android:text="@{@stringArray/weather_conditions[info.current.conditionIndex]}"
				android:textSize="@dimen/_14ssp"
				android:textStyle="bold"
				app:layout_constrainedWidth="true"
				app:layout_constraintBottom_toTopOf="@id/tv_wind"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/tv_min_max"
				app:layout_constraintWidth_max="@dimen/_180sdp"
				tools:text="chance of fish rain and blood"/>
			<TextView
				android:id="@+id/tv_wind"
				android:layout_width="@dimen/_120sdp"
				android:layout_height="wrap_content"
				android:contentDescription="@string/cd_wind_speed_dir"
				android:drawablePadding="@dimen/_4sdp"
				android:gravity="center_vertical|end"
				android:text="@{@string/f_comma_sep(info.currentWindSpeed, @stringArray/dir_letters[info.currentWindDirIndex])}"
				android:textSize="@dimen/_12ssp"
				app:drawableTint="?attr/colorOnSurface"
				app:drawableStartCompat="@drawable/ic_wind"
				app:layout_constraintBottom_toTopOf="@id/tv_humidity"
				app:layout_constraintEnd_toStartOf="@+id/mid_v_guideline"
				app:layout_constraintStart_toStartOf="@+id/mid_v_guideline"
				app:layout_constraintTop_toBottomOf="@+id/tv_weather"
				tools:text="150 m/s, SW"/>
			<TextView
				android:id="@+id/tv_humidity"
				android:layout_width="@dimen/_120sdp"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/_8sdp"
				android:contentDescription="@string/cd_humidity"
				android:drawablePadding="@dimen/_4sdp"
				android:gravity="center_vertical|end"
				android:text="@{info.currentHumidity}"
				android:textSize="@dimen/_12ssp"
				app:drawableStartCompat="@drawable/ic_humidity"
				app:drawableTint="?attr/colorOnSurface"
				app:layout_constraintBottom_toTopOf="@id/tv_sunrise"
				app:layout_constraintEnd_toStartOf="@+id/mid_v_guideline"
				app:layout_constraintStart_toStartOf="@+id/mid_v_guideline"
				app:layout_constraintTop_toBottomOf="@+id/tv_wind"
				tools:text="70 %"/>
			<TextView
				android:id="@+id/tv_sunrise"
				android:layout_width="@dimen/_120sdp"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/_8sdp"
				android:contentDescription="@string/cd_sunrise"
				android:drawablePadding="@dimen/_4sdp"
				android:gravity="center_vertical|end"
				android:text="@{info.todaySunrise}"
				android:textSize="@dimen/_12ssp"
				app:drawableStartCompat="@drawable/anim_sunrise"
				app:drawableTint="?attr/colorOnSurface"
				app:layout_constraintBottom_toTopOf="@id/tv_sunset"
				app:layout_constraintEnd_toStartOf="@+id/mid_v_guideline"
				app:layout_constraintStart_toStartOf="@+id/mid_v_guideline"
				app:layout_constraintTop_toBottomOf="@+id/tv_humidity"
				tools:text="5:35 AM"/>
			<TextView
				android:id="@+id/tv_sunset"
				android:layout_width="@dimen/_120sdp"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/_8sdp"
				android:contentDescription="@string/cd_sunset"
				android:drawablePadding="@dimen/_4sdp"
				android:gravity="center_vertical|end"
				android:text="@{info.todaySunset}"
				android:textSize="@dimen/_12ssp"
				app:drawableStartCompat="@drawable/anim_sunset"
				app:drawableTint="?attr/colorOnSurface"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toStartOf="@+id/mid_v_guideline"
				app:layout_constraintStart_toStartOf="@+id/mid_v_guideline"
				app:layout_constraintTop_toBottomOf="@+id/tv_sunrise"
				tools:text="7:41 PM"/>
		</androidx.constraintlayout.widget.ConstraintLayout>
	</androidx.core.widget.NestedScrollView>
</layout>

